# memo

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/memo/: macros.h  memo.h  page.h
src/: main.c  memo.c  page.c
tests/: CMakeLists.txt  compile_flags.txt
tests/include/memo_test/: test.h
tests/src/: main.c  test.c
